; ModuleID = '/home/carl/AnghaBench/libgit2/tests/config/extr_config_helpers.c_count_config_entries_match.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/config/extr_config_helpers.c_count_config_entries_match.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@count_config_entries_cb = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @count_config_entries_match(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  store i32 0, i32* %6, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @git_repository_config(i32** %5, i32* %7)
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i32*, i32** %5, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = load i32, i32* @count_config_entries_cb, align 4
  %13 = call i32 @git_config_foreach_match(i32* %10, i8* %11, i32 %12, i32* %6)
  %14 = call i32 @cl_assert_equal_i(i32 0, i32 %13)
  %15 = load i32*, i32** %5, align 8
  %16 = call i32 @git_config_free(i32* %15)
  %17 = load i32, i32* %6, align 4
  ret i32 %17
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_config(i32**, i32*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_config_foreach_match(i32*, i8*, i32, i32*) #1

declare dso_local i32 @git_config_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
